<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="242dp"
        android:layout_height="67dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:drawableLeft="@drawable/email"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="152dp"
        android:layout_height="190dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/virginia_state_trojans_logo"
        android:contentDescription="@string/trojan_logo" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:text="@string/campus"
        android:textColor="@color/blue"
        android:textSize="33sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/appTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/eats"
        android:textColor="@color/orange"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/appTitle"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="254dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_to_your_account"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/appTitle2"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="@+id/appTitle"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/blue"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/orange"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/new_user_sign_up"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>